--- a/admin/src/assets/scss/pages/authentication/authentication.scss
+++ b/admin/src/assets/scss/pages/authentication/authentication.scss
@@ -11,7 +11,7 @@
     left: 0%;
     text-align: center;
     padding: 40px;
-    background: url(../../assets/img/login-left-bg.png) no-repeat;
+    background: url(/img/login-left-bg.png) no-repeat;
     background-size: cover;
     h3 { font-size: 32px; font-weight: 500; color:white; position: relative; top: 30%; text-transform: uppercase; }
    h2 { color: #008c8c ; position: relative; top: 31%;  margin-right: 65%}
