--- a/admin/src/assets/scss/rtl/rtl.scss
+++ b/admin/src/assets/scss/rtl/rtl.scss
@@ -54,7 +54,7 @@
 
     .custom-select {
         padding: .375rem .75rem .375rem 1.75rem;
-        //background: url(../../images/custom-select.png) left 0.35rem center no-repeat $white;
+        //background: url(/custom-select.png) left 0.35rem center no-repeat $white;
     }
 
     .custom-control {
