--- a/admin/src/assets/scss/core/extra/extra.scss
+++ b/admin/src/assets/scss/core/extra/extra.scss
@@ -303,7 +303,7 @@ label {
 .error-box {
   height: 100%;
   position: fixed;
-  //background: url(../../../images/background/error-bg.jpg) no-repeat center center #fff;
+  //background: url(/background/error-bg.jpg) no-repeat center center #fff;
   width: 100%;
   .error-body {
     padding-top: 5%;
