--- a/admin/src/theme/default/admin/layout/auth/auth.component.scss
+++ b/admin/src/theme/default/admin/layout/auth/auth.component.scss
@@ -8,7 +8,7 @@
     margin: auto;
     width: 85%;
     // background-color:#eaeaea !important;
-    background: url('assets/img/mask.svg') right no-repeat #eaeaea;
+    background: url(/assets/img/mask.svg) right no-repeat #eaeaea;
     height: 530px;
     -o-object-fit: contain;
     object-fit: contain;
