--- a/store/src/default/theme/styles/_base.scss
+++ b/store/src/default/theme/styles/_base.scss
@@ -366,7 +366,7 @@ a{
         border: 0;
         outline: none;
         padding-left: 9%;
-        background: url("assets/images/search.png") 10px no-repeat #f5f5f5;
+        background: url(/assets/images/search.png) 10px no-repeat #f5f5f5;
         width: 100%;
     }
     .search-btn{
