--- a/store/src/styles.scss
+++ b/store/src/styles.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-@import '~swiper/dist/css/swiper.min.css';
+@import '~swiper/swiper.scss';
 @import "default/theme/styles/base";
 @import "default/theme/styles/theme";
 @import '~@ngx-share/button/themes/default/default-theme';
